--- a/frontend/src/app/components/reporte/reporte.component.html
+++ b/frontend/src/app/components/reporte/reporte.component.html
@@ -21,7 +21,7 @@
           </table>
     </div>
 </div>
-<!--<div class="container">
+<div class="container">
   REPORTE COMPLETO DE PAGO IMPUESTO RENTA
   <div>
       <table class="table table-striped">
@@ -59,4 +59,4 @@
           </tbody>
         </table>
   </div>
-</div>-->
+</div>
